--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
   <header>
     <div class="header-content">
       <div class="header-content-inner">
-        <!-- <h1>GT Solar Decathlon</h1> -->
+        <!-- <h1 class="light">GT Solar Decathlon</h1> -->
+        <img src="img/SD-logo-transparent_yellow1.png" class="img-responsive center logo" alt="" height="100px" width="100px"  />
         <h1 class="light">Project Olynthus</h1>
         <hr class="primary">
         <p>Project Olynthus is a self sustaining solar powered house that will be built for the upcoming 2017 Department of Energy's Solar Decathlon competition.</p>
