--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <div class="header-content">
       <div class="header-content-inner">
         <!-- <h1 class="light">GT Solar Decathlon</h1> -->
-        <img src="img/SD-logo-transparent_yellow1.png" class="img-responsive center logo" alt="" height="100px" width="100px"  />
+        <img src="img/SD-logo-transparent_yellow1.png" class="img-responsive center logo" alt="" height="120px" width="120px"  />
         <h1 class="light">Project Olynthus</h1>
         <hr class="primary">
         <p>Project Olynthus is a self sustaining solar powered house that will be built for the upcoming 2017 Department of Energy's Solar Decathlon competition.</p>
@@ -274,7 +274,7 @@
               <div class="col-lg-8 col-lg-offset-2 text-center">
                   <h2 class="section-heading light">Let's Get In Touch!</h2>
                   <hr class="primary">
-                  <p>Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                  <p>Ready to work with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
               </div>
               <div class="col-lg-4 col-lg-offset-2 text-center">
                   <i class="fa fa-phone fa-3x wow bounceIn"></i>
@@ -282,7 +282,7 @@
               </div>
               <div class="col-lg-4 text-center">
                   <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                  <p><a href="mailto:your-email@your-domain.com">feedback@startbootstrap.com</a></p>
+                  <p><a href="mailto:your-email@your-domain.com">info@gtsolardecathlon.com</a></p>
               </div>
           </div>
       </div>
