--- a/index.html
+++ b/index.html
@@ -162,100 +162,104 @@
     </div>
   </section>
 
-  <section class="no-padding" id="core_members">
-    <div class="container-fluid">
-      <div class="row no-gutter">
-        <div class="col-lg-4 col-sm-6">
-          <a href="#" class="portfolio-box">
-            <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-                  Category
+  <section class="bg-dark">
+    <div class="">
+      <section class="no-padding" id="core_members">
+        <div class="container-fluid">
+          <div class="row no-gutter">
+            <div class="col-lg-4 col-sm-6">
+              <a href="#" class="portfolio-box">
+                <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                <div class="portfolio-box-caption">
+                  <div class="portfolio-box-caption-content">
+                    <div class="project-category text-faded">
+                      Category
+                    </div>
+                    <div class="project-name">
+                      Project Name
+                    </div>
+                  </div>
                 </div>
-                <div class="project-name">
-                  Project Name
-                </div>
-              </div>
+              </a>
             </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a href="#" class="portfolio-box">
-            <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-                  Category
+            <div class="col-lg-4 col-sm-6">
+              <a href="#" class="portfolio-box">
+                <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
+                <div class="portfolio-box-caption">
+                  <div class="portfolio-box-caption-content">
+                    <div class="project-category text-faded">
+                      Category
+                    </div>
+                    <div class="project-name">
+                      Project Name
+                    </div>
+                  </div>
                 </div>
-                <div class="project-name">
-                  Project Name
-                </div>
-              </div>
+              </a>
             </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a href="#" class="portfolio-box">
-            <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-                  Category
+            <div class="col-lg-4 col-sm-6">
+              <a href="#" class="portfolio-box">
+                <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
+                <div class="portfolio-box-caption">
+                  <div class="portfolio-box-caption-content">
+                    <div class="project-category text-faded">
+                      Category
+                    </div>
+                    <div class="project-name">
+                      Project Name
+                    </div>
+                  </div>
                 </div>
-                <div class="project-name">
-                  Project Name
-                </div>
-              </div>
+              </a>
             </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a href="#" class="portfolio-box">
-            <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-                  Category
+            <div class="col-lg-4 col-sm-6">
+              <a href="#" class="portfolio-box">
+                <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                <div class="portfolio-box-caption">
+                  <div class="portfolio-box-caption-content">
+                    <div class="project-category text-faded">
+                      Category
+                    </div>
+                    <div class="project-name">
+                      Project Name
+                    </div>
+                  </div>
                 </div>
-                <div class="project-name">
-                  Project Name
-                </div>
-              </div>
+              </a>
             </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a href="#" class="portfolio-box">
-            <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-                  Category
+            <div class="col-lg-4 col-sm-6">
+              <a href="#" class="portfolio-box">
+                <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
+                <div class="portfolio-box-caption">
+                  <div class="portfolio-box-caption-content">
+                    <div class="project-category text-faded">
+                      Category
+                    </div>
+                    <div class="project-name">
+                      Project Name
+                    </div>
+                  </div>
                 </div>
-                <div class="project-name">
-                  Project Name
-                </div>
-              </div>
+              </a>
             </div>
-          </a>
-        </div>
-        <div class="col-lg-4 col-sm-6">
-          <a href="#" class="portfolio-box">
-            <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
-            <div class="portfolio-box-caption">
-              <div class="portfolio-box-caption-content">
-                <div class="project-category text-faded">
-                  Category
+            <div class="col-lg-4 col-sm-6">
+              <a href="#" class="portfolio-box">
+                <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
+                <div class="portfolio-box-caption">
+                  <div class="portfolio-box-caption-content">
+                    <div class="project-category text-faded">
+                      Category
+                    </div>
+                    <div class="project-name">
+                      Project Name
+                    </div>
+                  </div>
                 </div>
-                <div class="project-name">
-                  Project Name
-                </div>
-              </div>
+              </a>
             </div>
-          </a>
+          </div>
         </div>
-      </div>
+      </section>
     </div>
   </section>
 
