Changed the colors and the header image

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <div class="header-content-inner">
         <!-- <h1 class="light">GT Solar Decathlon</h1> -->
         <img src="img/SD-logo-transparent_yellow1.png" class="img-responsive center logo" alt="" height="120px" width="120px"  />
-        <h1 class="light">Project Olynthus</h1>
+        <h1 class="light title-text">Project Olynthus</h1>
         <hr class="primary">
         <p>Project Olynthus is a self sustaining solar powered house that will be built for the upcoming 2017 Department of Energy's Solar Decathlon competition.</p>
         <a href="#about" class="btn btn-primary btn-xl page-scroll">What exactly is Solar Decathlon</a>
