Fix the spelling of sustainable in description

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           <p class="text-faded">Solar Decathlon is an interdisciplinary competition organized by the Department of Energy where collegiate teams design and build cost efficient and sustainable solar powered houses.</p>
           <hr class="primary">
           <h3>Project Olynthus</h3>
-          <p class="text-faded">Olynthus is Georgia Tech's submission to the competition that uses modular architectural approach to tackle uneven and unplanned urban growth. It implements best design and construction principles to minimize enenrgy consumption and maximize production. Olynthus also attempts to shape resident's habits to make not only a suatainable house, but also a suatainable citizen.
+          <p class="text-faded">Olynthus is Georgia Tech's submission to the competition that uses modular architectural approach to tackle uneven and unplanned urban growth. It implements best design and construction principles to minimize enenrgy consumption and maximize production. Olynthus also attempts to shape resident's habits to make not only a sustainable house, but also a sustainable citizen.
           </p>
           <br>
           <a href="#teams" class="btn btn-primary btn-xl page-scroll">Teams</a>
