--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
     </div>
   </section>
 
-  <section class="bg-dark">
+  <!-- <section class="bg-dark">
     <div class="">
       <section class="no-padding" id="core_members">
         <div class="container-fluid">
@@ -276,7 +276,7 @@
         </div>
       </section>
     </div>
-  </section>
+  </section> -->
 
   <section class="bg-dark" id="contact_us">
       <div class="container">
@@ -311,7 +311,7 @@
 
   <!-- Custom Theme JavaScript -->
   <script src="js/creative.js"></script>
-  <script src="js/custom.js"></script>
+  <!-- <script src="js/custom.js"></script> -->
 
 </body>
 
