--- a/index.html
+++ b/index.html
@@ -160,106 +160,107 @@
         </div>
       </div>
     </div>
-  </section>
-  <section class="bg-dark" id="team-description">
-    <div class="container center-block" id="team-description-electrical">
-      <div class="row row-centered">
-        <div class="col-lg-12 col-md-12 text-center">
-          <div class="service-box">
-            <i class="fa fa-4x fa-th-large wow bounceIn light"></i>
-            <h3>Electrical</h3>
+
+    <div class="bg-dark container" id="team-description">
+      <div class="center-block" id="team-description-electrical">
+        <div class="row row-centered">
+          <div class="col-lg-12 col-md-12 text-center">
+            <div class="service-box">
+              <i class="fa fa-4x fa-th-large   light"></i>
+              <h3>Electrical</h3>
+            </div>
+          </div>
+        </div>
+        <div class="row row-centered">
+          <div class="col-md-8 col-md-offset-2 text-center">
+            <div class="text-muted" id="description-electric">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius volutpat nibh at varius. Nam ac ultricies tellus, in bibendum massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut metus libero, dignissim in justo vitae, pretium convallis mi. Aliquam id mi a dolor suscipit gravida vitae in eros. Nunc a blandit turpis, quis ultrices tellus. In dignissim, ipsum a iaculis eleifend, lorem quam malesuada augue, non condimentum augue leo sed mauris.</p>
+            </div>
           </div>
         </div>
       </div>
-      <div class="row row-centered">
-        <div class="col-md-8 col-md-offset-2 text-center">
-          <div class="text-muted" id="description-electric">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius volutpat nibh at varius. Nam ac ultricies tellus, in bibendum massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut metus libero, dignissim in justo vitae, pretium convallis mi. Aliquam id mi a dolor suscipit gravida vitae in eros. Nunc a blandit turpis, quis ultrices tellus. In dignissim, ipsum a iaculis eleifend, lorem quam malesuada augue, non condimentum augue leo sed mauris.</p>
+      <div class="center-block" id="team-description-mechanical">
+        <div class="row row-centered">
+          <div class="col-lg-12 col-md-12 text-center">
+            <div class="service-box">
+              <i class="fa fa-4x fa-cog   light"></i>
+              <h3>Mechanical</h3>
+            </div>
+          </div>
+        </div>
+        <div class="row row-centered">
+          <div class="col-md-8 col-md-offset-2 text-center">
+            <div class="text-muted" id="description-mechanical">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius volutpat nibh at varius. Nam ac ultricies tellus, in bibendum massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut metus libero, dignissim in justo vitae, pretium convallis mi. Aliquam id mi a dolor suscipit gravida vitae in eros. Nunc a blandit turpis, quis ultrices tellus. In dignissim, ipsum a iaculis eleifend, lorem quam malesuada augue, non condimentum augue leo sed mauris.</p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="container center-block" id="team-description-mechanical">
-      <div class="row row-centered">
-        <div class="col-lg-12 col-md-12 text-center">
-          <div class="service-box">
-            <i class="fa fa-4x fa-cog wow bounceIn light"></i>
-            <h3>Mechanical</h3>
+      <div class="center-block" id="team-description-computing">
+        <div class="row row-centered">
+          <div class="col-lg-12 col-md-12 text-center">
+            <div class="service-box">
+              <i class="fa fa-4x fa-link   light"></i>
+              <h3>Computing</h3>
+            </div>
+          </div>
+        </div>
+        <div class="row row-centered">
+          <div class="col-md-8 col-md-offset-2 text-center">
+            <div class="text-muted" id="description-computing">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius volutpat nibh at varius. Nam ac ultricies tellus, in bibendum massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut metus libero, dignissim in justo vitae, pretium convallis mi. Aliquam id mi a dolor suscipit gravida vitae in eros. Nunc a blandit turpis, quis ultrices tellus. In dignissim, ipsum a iaculis eleifend, lorem quam malesuada augue, non condimentum augue leo sed mauris.</p>
+            </div>
           </div>
         </div>
       </div>
-      <div class="row row-centered">
-        <div class="col-md-8 col-md-offset-2 text-center">
-          <div class="text-muted" id="description-mechanical">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius volutpat nibh at varius. Nam ac ultricies tellus, in bibendum massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut metus libero, dignissim in justo vitae, pretium convallis mi. Aliquam id mi a dolor suscipit gravida vitae in eros. Nunc a blandit turpis, quis ultrices tellus. In dignissim, ipsum a iaculis eleifend, lorem quam malesuada augue, non condimentum augue leo sed mauris.</p>
+      <div class="center-block" id="team-description-architecture">
+        <div class="row row-centered">
+          <div class="col-lg-12 col-md-12 text-center">
+            <div class="service-box">
+              <i class="fa fa-4x fa-pencil   light"></i>
+              <h3>Architecture</h3>
+            </div>
+          </div>
+        </div>
+        <div class="row row-centered">
+          <div class="col-md-8 col-md-offset-2 text-center">
+            <div class="text-muted" id="description-architecture">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius volutpat nibh at varius. Nam ac ultricies tellus, in bibendum massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut metus libero, dignissim in justo vitae, pretium convallis mi. Aliquam id mi a dolor suscipit gravida vitae in eros. Nunc a blandit turpis, quis ultrices tellus. In dignissim, ipsum a iaculis eleifend, lorem quam malesuada augue, non condimentum augue leo sed mauris.</p>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="container center-block" id="team-description-computing">
-      <div class="row row-centered">
-        <div class="col-lg-12 col-md-12 text-center">
-          <div class="service-box">
-            <i class="fa fa-4x fa-link wow bounceIn light"></i>
-            <h3>Computing</h3>
+      <div class="center-block" id="team-description-design">
+        <div class="row row-centered">
+          <div class="col-lg-12 col-md-12 text-center">
+            <div class="service-box">
+              <i class="fa fa-4x fa-heart   light"></i>
+              <h3>Design</h3>
+            </div>
+          </div>
+        </div>
+        <div class="row row-centered">
+          <div class="col-md-8 col-md-offset-2 text-center">
+            <div class="text-muted" id="description-design">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius volutpat nibh at varius. Nam ac ultricies tellus, in bibendum massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut metus libero, dignissim in justo vitae, pretium convallis mi. Aliquam id mi a dolor suscipit gravida vitae in eros. Nunc a blandit turpis, quis ultrices tellus. In dignissim, ipsum a iaculis eleifend, lorem quam malesuada augue, non condimentum augue leo sed mauris.</p>
+            </div>
           </div>
         </div>
       </div>
-      <div class="row row-centered">
-        <div class="col-md-8 col-md-offset-2 text-center">
-          <div class="text-muted" id="description-computing">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius volutpat nibh at varius. Nam ac ultricies tellus, in bibendum massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut metus libero, dignissim in justo vitae, pretium convallis mi. Aliquam id mi a dolor suscipit gravida vitae in eros. Nunc a blandit turpis, quis ultrices tellus. In dignissim, ipsum a iaculis eleifend, lorem quam malesuada augue, non condimentum augue leo sed mauris.</p>
+      <div class="center-block" id="team-description-business">
+        <div class="row row-centered">
+          <div class="col-lg-12 col-md-12 text-center">
+            <div class="service-box">
+              <i class="fa fa-4x fa-usd light"></i>
+              <h3>Business</h3>
+            </div>
           </div>
         </div>
-      </div>
-    </div>
-    <div class="container center-block" id="team-description-architecture">
-      <div class="row row-centered">
-        <div class="col-lg-12 col-md-12 text-center">
-          <div class="service-box">
-            <i class="fa fa-4x fa-pencil wow bounceIn light"></i>
-            <h3>Architecture</h3>
-          </div>
-        </div>
-      </div>
-      <div class="row row-centered">
-        <div class="col-md-8 col-md-offset-2 text-center">
-          <div class="text-muted" id="description-architecture">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius volutpat nibh at varius. Nam ac ultricies tellus, in bibendum massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut metus libero, dignissim in justo vitae, pretium convallis mi. Aliquam id mi a dolor suscipit gravida vitae in eros. Nunc a blandit turpis, quis ultrices tellus. In dignissim, ipsum a iaculis eleifend, lorem quam malesuada augue, non condimentum augue leo sed mauris.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="container center-block" id="team-description-design">
-      <div class="row row-centered">
-        <div class="col-lg-12 col-md-12 text-center">
-          <div class="service-box">
-            <i class="fa fa-4x fa-heart wow bounceIn light"></i>
-            <h3>Design</h3>
-          </div>
-        </div>
-      </div>
-      <div class="row row-centered">
-        <div class="col-md-8 col-md-offset-2 text-center">
-          <div class="text-muted" id="description-design">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius volutpat nibh at varius. Nam ac ultricies tellus, in bibendum massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut metus libero, dignissim in justo vitae, pretium convallis mi. Aliquam id mi a dolor suscipit gravida vitae in eros. Nunc a blandit turpis, quis ultrices tellus. In dignissim, ipsum a iaculis eleifend, lorem quam malesuada augue, non condimentum augue leo sed mauris.</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="container center-block" id="team-description-business">
-      <div class="row row-centered">
-        <div class="col-lg-12 col-md-12 text-center">
-          <div class="service-box">
-            <i class="fa fa-4x fa-usd wow bounceIn light"></i>
-            <h3>Business</h3>
-          </div>
-        </div>
-      </div>
-      <div class="row row-centered">
-        <div class="col-md-8 col-md-offset-2 text-center">
-          <div class="text-muted" id="description-business">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius volutpat nibh at varius. Nam ac ultricies tellus, in bibendum massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut metus libero, dignissim in justo vitae, pretium convallis mi. Aliquam id mi a dolor suscipit gravida vitae in eros. Nunc a blandit turpis, quis ultrices tellus. In dignissim, ipsum a iaculis eleifend, lorem quam malesuada augue, non condimentum augue leo sed mauris.</p>
+        <div class="row row-centered">
+          <div class="col-md-8 col-md-offset-2 text-center">
+            <div class="text-muted" id="description-business">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius volutpat nibh at varius. Nam ac ultricies tellus, in bibendum massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut metus libero, dignissim in justo vitae, pretium convallis mi. Aliquam id mi a dolor suscipit gravida vitae in eros. Nunc a blandit turpis, quis ultrices tellus. In dignissim, ipsum a iaculis eleifend, lorem quam malesuada augue, non condimentum augue leo sed mauris.</p>
+            </div>
           </div>
         </div>
       </div>
