--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
   <!-- Plugin CSS -->
   <link rel="stylesheet" href="css/animate.min.css" type="text/css">
 
+  <!-- Hover CSS -->
+  <link rel="stylesheet" href="css/hover-min.css" media="all">
+
   <!-- Custom CSS -->
   <link rel="stylesheet" href="css/creative.css" type="text/css">
 
@@ -116,21 +119,21 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box" id="electrical-box">
-            <i class="fa fa-4x fa-th-large wow bounceIn light"></i>
+            <i class="fa fa-4x fa-th-large wow bounceIn light hvr-grow"></i>
             <h3>Electrical</h3>
             <p class="text-muted">The team that shines.</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box" id="mechanical-box">
-            <i class="fa fa-4x fa-cog wow bounceIn light" data-wow-delay=".1s"></i>
+            <i class="fa fa-4x fa-cog wow bounceIn light hvr-grow" data-wow-delay=".1s"></i>
             <h3>Mechanical</h3>
             <p class="text-muted">The pillars of Olynthus.</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box" id="computing-box">
-            <i class="fa fa-4x fa-link wow bounceIn light" data-wow-delay=".2s"></i>
+            <i class="fa fa-4x fa-link wow bounceIn light hvr-grow" data-wow-delay=".2s"></i>
             <h3>Computing</h3>
             <p class="text-muted">Bringing the house to life.</p>
           </div>
@@ -139,21 +142,21 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box" id="architecture-box">
-            <i class="fa fa-4x fa-pencil wow bounceIn light" data-wow-delay=".3s"></i>
+            <i class="fa fa-4x fa-pencil wow bounceIn light hvr-grow" data-wow-delay=".3s"></i>
             <h3>Architecture</h3>
             <p class="text-muted">Laying the groundwork.</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box" id="design-box">
-            <i class="fa fa-4x fa-heart wow bounceIn light" data-wow-delay=".4s"></i>
+            <i class="fa fa-4x fa-heart wow bounceIn light hvr-grow" data-wow-delay=".4s"></i>
             <h3>Design</h3>
             <p class="text-muted">Making everything look badass.</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
           <div class="service-box" id="business-box">
-            <i class="fa fa-4x fa-usd wow bounceIn light" data-wow-delay=".5s"></i>
+            <i class="fa fa-4x fa-usd wow bounceIn light hvr-grow" data-wow-delay=".5s"></i>
             <h3>Business</h3>
             <p class="text-muted">Where the money lies.</p>
           </div>
@@ -166,7 +169,7 @@
         <div class="row row-centered">
           <div class="col-lg-12 col-md-12 text-center">
             <div class="service-box">
-              <i class="fa fa-4x fa-th-large   light"></i>
+              <i class="fa fa-4x fa-th-large light hvr-grow"></i>
               <h3>Electrical</h3>
             </div>
           </div>
@@ -183,7 +186,7 @@
         <div class="row row-centered">
           <div class="col-lg-12 col-md-12 text-center">
             <div class="service-box">
-              <i class="fa fa-4x fa-cog   light"></i>
+              <i class="fa fa-4x fa-cog light hvr-grow"></i>
               <h3>Mechanical</h3>
             </div>
           </div>
@@ -200,7 +203,7 @@
         <div class="row row-centered">
           <div class="col-lg-12 col-md-12 text-center">
             <div class="service-box">
-              <i class="fa fa-4x fa-link   light"></i>
+              <i class="fa fa-4x fa-link light hvr-grow"></i>
               <h3>Computing</h3>
             </div>
           </div>
@@ -217,7 +220,7 @@
         <div class="row row-centered">
           <div class="col-lg-12 col-md-12 text-center">
             <div class="service-box">
-              <i class="fa fa-4x fa-pencil   light"></i>
+              <i class="fa fa-4x fa-pencil light hvr-grow"></i>
               <h3>Architecture</h3>
             </div>
           </div>
@@ -234,7 +237,7 @@
         <div class="row row-centered">
           <div class="col-lg-12 col-md-12 text-center">
             <div class="service-box">
-              <i class="fa fa-4x fa-heart   light"></i>
+              <i class="fa fa-4x fa-heart light hvr-grow"></i>
               <h3>Design</h3>
             </div>
           </div>
@@ -251,7 +254,7 @@
         <div class="row row-centered">
           <div class="col-lg-12 col-md-12 text-center">
             <div class="service-box">
-              <i class="fa fa-4x fa-usd light"></i>
+              <i class="fa fa-4x fa-usd light hvr-grow"></i>
               <h3>Business</h3>
             </div>
           </div>
