--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
 
   <!-- Custom Theme JavaScript -->
   <script src="js/creative.js"></script>
-  <!-- <script src="js/custom.js"></script> -->
+  <script src="js/custom.js"></script>
 
 </body>
 
