--- a/index.html
+++ b/index.html
@@ -177,7 +177,9 @@
         <div class="row row-centered">
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="text-muted" id="description-electric">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius volutpat nibh at varius. Nam ac ultricies tellus, in bibendum massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut metus libero, dignissim in justo vitae, pretium convallis mi. Aliquam id mi a dolor suscipit gravida vitae in eros. Nunc a blandit turpis, quis ultrices tellus. In dignissim, ipsum a iaculis eleifend, lorem quam malesuada augue, non condimentum augue leo sed mauris.</p>
+              <p>
+                The Georgia Tech Solar Decathlon Electrical team envisions to meet the sustainability and energy efficiency goals of Project Olynthus by maximizing the energy output of the house, and by minimizing its energy consumption. In order to make complete use of the resources of the house, we plan to optimize the technology used in the house’s solar PV system, so it can maximize energy output in Atlanta’s temperate climate. On the other hand, to make this house more energy efficient than the average American home. We plan to design the electrical systems of the house from scratch, and tailor it for our key users. This team is also responsible for incorporating the electrical systems of the house, in collaboration with the computing team, with a system that can provide the user feedback on their energy consumption statistics, and shape user habits.  With focus on proper integration of electrical systems, this team plans to make this project a model for exemplary engineering, and prove that a well-made, and affordable house has the potential to make a sustainable urban lifestyle a reality.
+              </p>
             </div>
           </div>
         </div>
@@ -194,7 +196,9 @@
         <div class="row row-centered">
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="text-muted" id="description-mechanical">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius volutpat nibh at varius. Nam ac ultricies tellus, in bibendum massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut metus libero, dignissim in justo vitae, pretium convallis mi. Aliquam id mi a dolor suscipit gravida vitae in eros. Nunc a blandit turpis, quis ultrices tellus. In dignissim, ipsum a iaculis eleifend, lorem quam malesuada augue, non condimentum augue leo sed mauris.</p>
+              <p>
+                The mechanical systems team will focus on bringing the home to life by allowing it to dynamically adjust to the user's habits. The team will focus on three main aspects; designing an efficient HVAC with variable motor fans and reliable humidity control, heat recovery systems and finally help research phase change materials to find the most optimum way to implement effective materials into the home.
+              </p>
             </div>
           </div>
         </div>
@@ -211,7 +215,9 @@
         <div class="row row-centered">
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="text-muted" id="description-computing">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius volutpat nibh at varius. Nam ac ultricies tellus, in bibendum massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut metus libero, dignissim in justo vitae, pretium convallis mi. Aliquam id mi a dolor suscipit gravida vitae in eros. Nunc a blandit turpis, quis ultrices tellus. In dignissim, ipsum a iaculis eleifend, lorem quam malesuada augue, non condimentum augue leo sed mauris.</p>
+              <p>
+                The computing team is tasked with designing and implementing the IoT system of the house that will track user habits and the energy consumed. This system will also try to shape user habits to create not only a sustainable house but also a sustainable citizen.
+              </p>
             </div>
           </div>
         </div>
@@ -228,7 +234,9 @@
         <div class="row row-centered">
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="text-muted" id="description-architecture">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius volutpat nibh at varius. Nam ac ultricies tellus, in bibendum massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut metus libero, dignissim in justo vitae, pretium convallis mi. Aliquam id mi a dolor suscipit gravida vitae in eros. Nunc a blandit turpis, quis ultrices tellus. In dignissim, ipsum a iaculis eleifend, lorem quam malesuada augue, non condimentum augue leo sed mauris.</p>
+              <p>
+                The architecture team works on the design and layout of the house, developing an envelope to allow for the other teams' technologies to be deployed. Not only does the team have to integrate the passive and active systems into the home, it is also necessary that these be employed in a comfortable and livable setting. The design process begins with conception and ideation, where we will work through ideas to focus on the best direction for completing the project. With a direction in mind we will develop the design in close collaboration with other teams, ensuring the feasibility and effectiveness of the design at every stage.  Materials and construction methods will be important to consider throughout, as once the design is finished it is time for construction detailing. Once the documentation is prepared, the project will move into the construction phase, where we get to see the design come to life.
+              </p>
             </div>
           </div>
         </div>
@@ -245,7 +253,9 @@
         <div class="row row-centered">
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="text-muted" id="description-design">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius volutpat nibh at varius. Nam ac ultricies tellus, in bibendum massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut metus libero, dignissim in justo vitae, pretium convallis mi. Aliquam id mi a dolor suscipit gravida vitae in eros. Nunc a blandit turpis, quis ultrices tellus. In dignissim, ipsum a iaculis eleifend, lorem quam malesuada augue, non condimentum augue leo sed mauris.</p>
+              <p>
+                We, the GT Solar Decathlon Design Team, a group of caffeinatetd, creative individuals, are in charge of designing the interior spaces of our home. Utilizing design thinking and effective collaboration, we will develop a language for the house that facilitates comfort, functionality, and sustainable design. Close collaboration with the other teams ensures a design that is consistent with the systems of our sustainable home. We look forward to sleeping, eating, and breathing design- but if that sounds too intense for you, we are just really excited for this project!
+              </p>
             </div>
           </div>
         </div>
@@ -262,7 +272,15 @@
         <div class="row row-centered">
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="text-muted" id="description-business">
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius volutpat nibh at varius. Nam ac ultricies tellus, in bibendum massa. Interdum et malesuada fames ac ante ipsum primis in faucibus. Ut metus libero, dignissim in justo vitae, pretium convallis mi. Aliquam id mi a dolor suscipit gravida vitae in eros. Nunc a blandit turpis, quis ultrices tellus. In dignissim, ipsum a iaculis eleifend, lorem quam malesuada augue, non condimentum augue leo sed mauris.</p>
+              <p>
+                The ultimate goal of the GT Solar Decathlon business team is to ensure the financial success of the project, and because of this goal, this division serves as a team core, uniting the engineering and architecture teams. The team strives to manage the project way that increases efficiency and reduces waste across the entire project. Furthermore, our budgetary controlling methods allow for smooth progression and optimal solutions.
+              </p>
+              <p>
+                The business team is divided into four core areas. The TOPL team handles general team operations, procurement of materials, and all logistics. The BCF team handles budget, controlling, and finances. The marketing team handles student relations, corporate sponsorship, and acquiring funds for the team. The human resources team handles recruitment and member management. All teams collaborate to ensure overall success.
+              </p>
+              <p>
+                Lastly, the business team determines where GT Solar Decathlon can make the biggest impact in the Atlanta community via case study development and field research.
+              </p>
             </div>
           </div>
         </div>
