Remove CNAME and add image folder

--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
     </div>
   </section>
 
-  <!-- <section class="bg-dark">
+  <section class="bg-dark">
     <div class="">
       <section class="no-padding" id="core_members">
         <div class="container-fluid">
@@ -387,7 +387,7 @@
         </div>
       </section>
     </div>
-  </section> -->
+  </section>
 
   <section class="bg-dark" id="contact_us">
       <div class="container">
