Add pics to members

--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
         <img src="img/SD-logo-transparent_yellow1.png" class="img-responsive center logo" alt="" height="120px" width="120px"  />
         <h1 class="light title-text">Project Olynthus</h1>
         <hr class="primary">
-        <p>Project Olynthus is a self sustaining solar powered house that will be built for the upcoming 2017 Department of Energy's Solar Decathlon competition.</p>
+        <p>
+          Project Olynthus is a self sustaining solar powered house that will be built for the upcoming 2017 Department of Energy's Solar Decathlon competition.
+        </p>
         <a href="#about" class="btn btn-primary btn-xl page-scroll">What exactly is Solar Decathlon</a>
       </div>
     </div>
@@ -295,14 +297,29 @@
           <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
               <a href="#" class="portfolio-box">
-                <img src="img/portfolio/1.jpg" class="img-responsive" alt="">
+                <img src="team-pics/alex3.jpg" class="img-responsive" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
                     <div class="project-category text-faded">
-                      Category
+                      Project Lead
                     </div>
                     <div class="project-name">
-                      Project Name
+                      Alex Poux
+                    </div>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-4 col-sm-6">
+              <a href="mailto:dmehra6@gatech.edu" class="portfolio-box">
+                <img src="team-pics/dhruv3.jpg" class="img-responsive" alt="">
+                <div class="portfolio-box-caption">
+                  <div class="portfolio-box-caption-content">
+                    <div class="project-category text-faded">
+                      Computing Team Lead
+                    </div>
+                    <div class="project-name">
+                      Dhruv Mehra
                     </div>
                   </div>
                 </div>
@@ -310,14 +327,14 @@
             </div>
             <div class="col-lg-4 col-sm-6">
               <a href="#" class="portfolio-box">
-                <img src="img/portfolio/2.jpg" class="img-responsive" alt="">
+                <img src="team-pics/varun3.jpg" class="img-responsive" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
                     <div class="project-category text-faded">
-                      Category
+                      Electrical Team Lead
                     </div>
                     <div class="project-name">
-                      Project Name
+                      Varun Duggal
                     </div>
                   </div>
                 </div>
@@ -325,14 +342,14 @@
             </div>
             <div class="col-lg-4 col-sm-6">
               <a href="#" class="portfolio-box">
-                <img src="img/portfolio/3.jpg" class="img-responsive" alt="">
+                <img src="team-pics/mechanical3.jpg" class="img-responsive" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
                     <div class="project-category text-faded">
-                      Category
+                      Mechanical Team Leads
                     </div>
                     <div class="project-name">
-                      Project Name
+                      Uma Rajagopalan, Francesca Gencarella and Andres Menendez
                     </div>
                   </div>
                 </div>
@@ -340,14 +357,14 @@
             </div>
             <div class="col-lg-4 col-sm-6">
               <a href="#" class="portfolio-box">
-                <img src="img/portfolio/4.jpg" class="img-responsive" alt="">
+                <img src="team-pics/Marissa-Adah3.jpg" class="img-responsive" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
                     <div class="project-category text-faded">
-                      Category
+                      Design Team Leads
                     </div>
                     <div class="project-name">
-                      Project Name
+                      Adah Griessbach and Marissa Childers
                     </div>
                   </div>
                 </div>
@@ -355,29 +372,14 @@
             </div>
             <div class="col-lg-4 col-sm-6">
               <a href="#" class="portfolio-box">
-                <img src="img/portfolio/5.jpg" class="img-responsive" alt="">
+                <img src="team-pics/will3.jpg" class="img-responsive" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
                     <div class="project-category text-faded">
-                      Category
+                      Business Team Lead
                     </div>
                     <div class="project-name">
-                      Project Name
-                    </div>
-                  </div>
-                </div>
-              </a>
-            </div>
-            <div class="col-lg-4 col-sm-6">
-              <a href="#" class="portfolio-box">
-                <img src="img/portfolio/6.jpg" class="img-responsive" alt="">
-                <div class="portfolio-box-caption">
-                  <div class="portfolio-box-caption-content">
-                    <div class="project-category text-faded">
-                      Category
-                    </div>
-                    <div class="project-name">
-                      Project Name
+                      William Courreges-Clercq
                     </div>
                   </div>
                 </div>
@@ -395,16 +397,16 @@
               <div class="col-lg-8 col-lg-offset-2 text-center">
                   <h2 class="section-heading light">Let's Get In Touch!</h2>
                   <hr class="primary">
-                  <p>Ready to work with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
+                  <p>Ready to work with us? That's great! Click on one of the Team Leads above to send us an email and we will get back to you as soon as possible!</p>
               </div>
-              <div class="col-lg-4 col-lg-offset-2 text-center">
+              <!-- <div class="col-lg-4 col-lg-offset-2 text-center">
                   <i class="fa fa-phone fa-3x wow bounceIn"></i>
                   <p>123-456-6789</p>
               </div>
               <div class="col-lg-4 text-center">
                   <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                   <p><a href="mailto:your-email@your-domain.com">info@gtsolardecathlon.com</a></p>
-              </div>
+              </div> -->
           </div>
       </div>
   </section>
