Compress images and move Project Olynthus description

--- a/index.html
+++ b/index.html
@@ -78,12 +78,12 @@
     <div class="header-content">
       <div class="header-content-inner">
         <!-- <h1 class="light">GT Solar Decathlon</h1> -->
-        <img src="img/SD-logo-transparent_yellow1.png" class="img-responsive center logo" alt="" height="120px" width="120px"  />
+        <img src="img/SD-logo-transparent_yellow1-min.png" class="img-responsive center logo" alt="" height="120px" width="120px"  />
         <h1 class="light title-text">Project Olynthus</h1>
         <hr class="primary">
-        <p>
+        <!-- <p>
           Project Olynthus is a self sustaining solar powered house that will be built for the upcoming 2017 Department of Energy's Solar Decathlon competition.
-        </p>
+        </p> -->
         <a href="#about" class="btn btn-primary btn-xl page-scroll">What exactly is Solar Decathlon</a>
       </div>
     </div>
@@ -96,10 +96,14 @@
           <h2 class="section-heading light">An attempt to make the world greener</h2>
           <br>
           <h3>Solar Decathlon</h3>
-          <p class="text-faded">Solar Decathlon is an interdisciplinary competition organized by the Department of Energy where collegiate teams design and build cost efficient and sustainable solar powered houses.</p>
+          <p class="text-faded">Solar Decathlon is an interdisciplinary competition organized by the Department of Energy where collegiate teams design and build cost efficient and sustainable solar powered houses. The next competition will be held in 2017.</p>
           <hr class="primary">
           <h3>Project Olynthus</h3>
-          <p class="text-faded">Olynthus is Georgia Tech's submission to the competition that uses modular architectural approach to tackle uneven and unplanned urban growth. It implements best design and construction principles to minimize enenrgy consumption and maximize production. Olynthus also attempts to shape resident's habits to make not only a sustainable house, but also a sustainable citizen.
+          <p class="text-faded">
+            Project Olynthus is a self sustaining solar powered house that will be built for the upcoming 2017 Department of Energy's Solar Decathlon competition.
+          </p>
+          <p class="text-faded">
+            Olynthus uses modular architectural approach to tackle uneven and unplanned urban growth while implementing best design and construction principles to minimize enenrgy consumption and maximize production. Olynthus also attempts to shape resident's habits to make not only a sustainable house, but also a sustainable citizen.
           </p>
           <br>
           <a href="#teams" class="btn btn-primary btn-xl page-scroll">Teams</a>
@@ -297,7 +301,7 @@
           <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
               <a href="#" class="portfolio-box">
-                <img src="team-pics/alex3.jpg" class="img-responsive" alt="">
+                <img src="team-pics/alex3-min.jpg" class="img-responsive" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
                     <div class="project-category text-faded">
@@ -312,7 +316,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
               <a href="mailto:dmehra6@gatech.edu" class="portfolio-box">
-                <img src="team-pics/dhruv3.jpg" class="img-responsive" alt="">
+                <img src="team-pics/dhruv3-min.jpg" class="img-responsive" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
                     <div class="project-category text-faded">
@@ -327,7 +331,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
               <a href="#" class="portfolio-box">
-                <img src="team-pics/varun3.jpg" class="img-responsive" alt="">
+                <img src="team-pics/varun3-min.jpg" class="img-responsive" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
                     <div class="project-category text-faded">
@@ -342,7 +346,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
               <a href="#" class="portfolio-box">
-                <img src="team-pics/mechanical3.jpg" class="img-responsive" alt="">
+                <img src="team-pics/mechanical3-min.jpg" class="img-responsive" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
                     <div class="project-category text-faded">
@@ -357,7 +361,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
               <a href="#" class="portfolio-box">
-                <img src="team-pics/Marissa-Adah3.jpg" class="img-responsive" alt="">
+                <img src="team-pics/Marissa-Adah3-min.jpg" class="img-responsive" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
                     <div class="project-category text-faded">
@@ -372,7 +376,7 @@
             </div>
             <div class="col-lg-4 col-sm-6">
               <a href="#" class="portfolio-box">
-                <img src="team-pics/will3.jpg" class="img-responsive" alt="">
+                <img src="team-pics/will3-min.jpg" class="img-responsive" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
                     <div class="project-category text-faded">
