--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
         <div class="container-fluid">
           <div class="row no-gutter">
             <div class="col-lg-4 col-sm-6">
-              <a href="#" class="portfolio-box">
+              <a href="alex.poux@gatech.edu" class="portfolio-box">
                 <img src="team-pics/alex3-min.jpg" class="img-responsive" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
@@ -330,7 +330,7 @@
               </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-              <a href="#" class="portfolio-box">
+              <a href="mailto:vduggal3@gatech.edu" class="portfolio-box">
                 <img src="team-pics/varun3-min.jpg" class="img-responsive" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
@@ -345,7 +345,7 @@
               </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-              <a href="#" class="portfolio-box">
+              <a href="mailto:frangenc@gatech.edu" class="portfolio-box">
                 <img src="team-pics/mechanical3-min.jpg" class="img-responsive" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
@@ -360,7 +360,7 @@
               </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-              <a href="#" class="portfolio-box">
+              <a href="mailto:a.griessbach@gatech.edu" class="portfolio-box">
                 <img src="team-pics/Marissa-Adah3-min.jpg" class="img-responsive" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
@@ -375,7 +375,7 @@
               </a>
             </div>
             <div class="col-lg-4 col-sm-6">
-              <a href="#" class="portfolio-box">
+              <a href="mailto:wcourreges@gatech.edu" class="portfolio-box">
                 <img src="team-pics/will3-min.jpg" class="img-responsive" alt="">
                 <div class="portfolio-box-caption">
                   <div class="portfolio-box-caption-content">
