--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
   <title>GT Solar Decathlon | Olynthus</title>
 
+  <link rel="shortcut icon" href="img/SD-logo-transparent_yellow1-min.ico" />
+
   <!-- Bootstrap Core CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
 
