Change icon to favicon

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <title>GT Solar Decathlon | Olynthus</title>
 
-  <link rel="shortcut icon" href="img/SD-logo-transparent_yellow1-min.ico" />
+  <link rel="shortcut icon" href="favicon.ico" />
 
   <!-- Bootstrap Core CSS -->
   <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
