--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <!-- <p>
           Project Olynthus is a self sustaining solar powered house that will be built for the upcoming 2017 Department of Energy's Solar Decathlon competition.
         </p> -->
-        <a href="#about" class="btn btn-primary btn-xl page-scroll">What exactly is Solar Decathlon</a>
+        <a href="#about" class="btn btn-primary btn-xl page-scroll">What exactly is Olynthus</a>
       </div>
     </div>
   </header>
@@ -97,9 +97,6 @@
         <div class="col-lg-8 col-lg-offset-2 text-center">
           <h2 class="section-heading light">An attempt to make the world greener</h2>
           <br>
-          <h3>Solar Decathlon</h3>
-          <p class="text-faded">Solar Decathlon is an interdisciplinary competition organized by the Department of Energy where collegiate teams design and build cost efficient and sustainable solar powered houses. The next competition will be held in 2017.</p>
-          <hr class="primary">
           <h3>Project Olynthus</h3>
           <p class="text-faded">
             Project Olynthus is a self sustaining solar powered house that will be built for the upcoming 2017 Department of Energy's Solar Decathlon competition.
@@ -107,6 +104,9 @@
           <p class="text-faded">
             Olynthus uses modular architectural approach to tackle uneven and unplanned urban growth while implementing best design and construction principles to minimize enenrgy consumption and maximize production. Olynthus also attempts to shape resident's habits to make not only a sustainable house, but also a sustainable citizen.
           </p>
+          <hr class="primary">
+          <h3>Solar Decathlon</h3>
+          <p class="text-faded">Solar Decathlon is an interdisciplinary competition organized by the Department of Energy where collegiate teams design and build cost efficient and sustainable solar powered houses. The next competition will be held in 2017.</p>
           <br>
           <a href="#teams" class="btn btn-primary btn-xl page-scroll">Teams</a>
         </div>
