Update design short txt

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           <div class="service-box" id="design-box">
             <i class="fa fa-4x fa-heart wow bounceIn light hvr-grow" data-wow-delay=".4s"></i>
             <h3>Design</h3>
-            <p class="text-muted">Making everything look badass.</p>
+            <p class="text-muted">Making your heart skip a beat.</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
