Add new headers, logos and change project olynthus to solar home at GT

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <title>GT Solar Decathlon | Olynthus</title>
+  <title>GT Solar Decathlon | Solar Home</title>
 
   <link rel="shortcut icon" href="favicon.ico" />
 
@@ -51,7 +51,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand page-scroll" href="#page-top">Olynthus</a>
+        <a class="navbar-brand page-scroll" href="#page-top">Solar Home</a>
       </div>
 
       <!-- Collect the nav links, forms, and other content for toggling -->
@@ -80,13 +80,13 @@
     <div class="header-content">
       <div class="header-content-inner">
         <!-- <h1 class="light">GT Solar Decathlon</h1> -->
-        <img src="img/SD-logo-transparent_yellow1-min.png" class="img-responsive center logo" alt="" height="120px" width="120px"  />
-        <h1 class="light title-text">Project Olynthus</h1>
+        <img src="img/logotransparent.png" class="img-responsive center logo" alt="" height="120px" width="120px" />
+        <h1 class="light title-text">Solar Home at Georgia Tech</h1>
         <hr class="primary">
         <!-- <p>
-          Project Olynthus is a self sustaining solar powered house that will be built for the upcoming 2017 Department of Energy's Solar Decathlon competition.
+          Solar Home at Georgia Tech is a self sustaining solar powered house that will be built for the upcoming 2017 Department of Energy's Solar Decathlon competition.
         </p> -->
-        <a href="#about" class="btn btn-primary btn-xl page-scroll">What exactly is Olynthus</a>
+        <a href="#about" class="btn btn-primary btn-xl page-scroll">about</a>
       </div>
     </div>
   </header>
@@ -97,12 +97,13 @@
         <div class="col-lg-8 col-lg-offset-2 text-center">
           <h2 class="section-heading light">An attempt to make the world greener</h2>
           <br>
-          <h3>Project Olynthus</h3>
+          <h3>Solar Home at Georgia Tech</h3>
           <p class="text-faded">
-            Project Olynthus is a self sustaining solar powered house that will be built for the upcoming 2017 Department of Energy's Solar Decathlon competition.
+            Solar Home at Georgia Tech is a self sustaining solar powered house that will be built for the upcoming 2017 Department of Energy's Solar Decathlon competition.
           </p>
           <p class="text-faded">
-            Olynthus uses modular architectural approach to tackle uneven and unplanned urban growth while implementing best design and construction principles to minimize enenrgy consumption and maximize production. Olynthus also attempts to shape resident's habits to make not only a sustainable house, but also a sustainable citizen.
+            Solar Home uses modular architectural approach to tackle uneven and unplanned urban growth while implementing best design and construction principles to minimize enenrgy consumption and maximize production. Solar Home also attempts to shape resident's
+            habits to make not only a sustainable house, but also a sustainable citizen.
           </p>
           <hr class="primary">
           <h3>Solar Decathlon</h3>
@@ -118,7 +119,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-12 text-center">
-          <h2 class="section-heading">The heart and soul of Project Olynthus</h2>
+          <h2 class="section-heading">The heart and soul of Solar Home at Georgia Tech</h2>
           <hr class="text-primary">
         </div>
       </div>
@@ -136,7 +137,7 @@
           <div class="service-box" id="mechanical-box">
             <i class="fa fa-4x fa-cog wow bounceIn light hvr-grow" data-wow-delay=".1s"></i>
             <h3>Mechanical</h3>
-            <p class="text-muted">The pillars of Olynthus.</p>
+            <p class="text-muted">The pillars of Solar Home.</p>
           </div>
         </div>
         <div class="col-lg-4 col-md-6 text-center">
@@ -186,7 +187,11 @@
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="text-muted" id="description-electric">
               <p>
-                The Georgia Tech Solar Decathlon Electrical team envisions to meet the sustainability and energy efficiency goals of Project Olynthus by maximizing the energy output of the house, and by minimizing its energy consumption. In order to make complete use of the resources of the house, we plan to optimize the technology used in the house’s solar PV system, so it can maximize energy output in Atlanta’s temperate climate. On the other hand, to make this house more energy efficient than the average American home. We plan to design the electrical systems of the house from scratch, and tailor it for our key users. This team is also responsible for incorporating the electrical systems of the house, in collaboration with the computing team, with a system that can provide the user feedback on their energy consumption statistics, and shape user habits.  With focus on proper integration of electrical systems, this team plans to make this project a model for exemplary engineering, and prove that a well-made, and affordable house has the potential to make a sustainable urban lifestyle a reality.
+                The Georgia Tech Solar Decathlon Electrical team envisions to meet the sustainability and energy efficiency goals of Solar Home at Georgia Tech by maximizing the energy output of the house, and by minimizing its energy consumption. In order to make complete
+                use of the resources of the house, we plan to optimize the technology used in the house’s solar PV system, so it can maximize energy output in Atlanta’s temperate climate. On the other hand, to make this house more energy efficient than
+                the average American home. We plan to design the electrical systems of the house from scratch, and tailor it for our key users. This team is also responsible for incorporating the electrical systems of the house, in collaboration with
+                the computing team, with a system that can provide the user feedback on their energy consumption statistics, and shape user habits. With focus on proper integration of electrical systems, this team plans to make this project a model for
+                exemplary engineering, and prove that a well-made, and affordable house has the potential to make a sustainable urban lifestyle a reality.
               </p>
             </div>
           </div>
@@ -205,7 +210,8 @@
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="text-muted" id="description-mechanical">
               <p>
-                The mechanical systems team will focus on bringing the home to life by allowing it to dynamically adjust to the user's habits. The team will focus on three main aspects; designing an efficient HVAC with variable motor fans and reliable humidity control, heat recovery systems and finally help research phase change materials to find the most optimum way to implement effective materials into the home.
+                The mechanical systems team will focus on bringing the home to life by allowing it to dynamically adjust to the user's habits. The team will focus on three main aspects; designing an efficient HVAC with variable motor fans and reliable humidity control,
+                heat recovery systems and finally help research phase change materials to find the most optimum way to implement effective materials into the home.
               </p>
             </div>
           </div>
@@ -224,7 +230,8 @@
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="text-muted" id="description-computing">
               <p>
-                The computing team is tasked with designing and implementing the IoT system of the house that will track user habits and the energy consumed. This system will also try to shape user habits to create not only a sustainable house but also a sustainable citizen.
+                The computing team is tasked with designing and implementing the IoT system of the house that will track user habits and the energy consumed. This system will also try to shape user habits to create not only a sustainable house but also a sustainable
+                citizen.
               </p>
             </div>
           </div>
@@ -243,7 +250,10 @@
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="text-muted" id="description-architecture">
               <p>
-                The architecture team works on the design and layout of the house, developing an envelope to allow for the other teams' technologies to be deployed. Not only does the team have to integrate the passive and active systems into the home, it is also necessary that these be employed in a comfortable and livable setting. The design process begins with conception and ideation, where we will work through ideas to focus on the best direction for completing the project. With a direction in mind we will develop the design in close collaboration with other teams, ensuring the feasibility and effectiveness of the design at every stage.  Materials and construction methods will be important to consider throughout, as once the design is finished it is time for construction detailing. Once the documentation is prepared, the project will move into the construction phase, where we get to see the design come to life.
+                The architecture team works on the design and layout of the house, developing an envelope to allow for the other teams' technologies to be deployed. Not only does the team have to integrate the passive and active systems into the home, it is also necessary
+                that these be employed in a comfortable and livable setting. The design process begins with conception and ideation, where we will work through ideas to focus on the best direction for completing the project. With a direction in mind we
+                will develop the design in close collaboration with other teams, ensuring the feasibility and effectiveness of the design at every stage. Materials and construction methods will be important to consider throughout, as once the design is
+                finished it is time for construction detailing. Once the documentation is prepared, the project will move into the construction phase, where we get to see the design come to life.
               </p>
             </div>
           </div>
@@ -262,7 +272,9 @@
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="text-muted" id="description-design">
               <p>
-                We, the GT Solar Decathlon Design Team, a group of caffeinatetd, creative individuals, are in charge of designing the interior spaces of our home. Utilizing design thinking and effective collaboration, we will develop a language for the house that facilitates comfort, functionality, and sustainable design. Close collaboration with the other teams ensures a design that is consistent with the systems of our sustainable home. We look forward to sleeping, eating, and breathing design- but if that sounds too intense for you, we are just really excited for this project!
+                We, the GT Solar Decathlon Design Team, a group of caffeinatetd, creative individuals, are in charge of designing the interior spaces of our home. Utilizing design thinking and effective collaboration, we will develop a language for the house that facilitates
+                comfort, functionality, and sustainable design. Close collaboration with the other teams ensures a design that is consistent with the systems of our sustainable home. We look forward to sleeping, eating, and breathing design- but if that
+                sounds too intense for you, we are just really excited for this project!
               </p>
             </div>
           </div>
@@ -281,10 +293,12 @@
           <div class="col-md-8 col-md-offset-2 text-center">
             <div class="text-muted" id="description-business">
               <p>
-                The ultimate goal of the GT Solar Decathlon business team is to ensure the financial success of the project, and because of this goal, this division serves as a team core, uniting the engineering and architecture teams. The team strives to manage the project way that increases efficiency and reduces waste across the entire project. Furthermore, our budgetary controlling methods allow for smooth progression and optimal solutions.
+                The ultimate goal of the GT Solar Decathlon business team is to ensure the financial success of the project, and because of this goal, this division serves as a team core, uniting the engineering and architecture teams. The team strives to manage the
+                project way that increases efficiency and reduces waste across the entire project. Furthermore, our budgetary controlling methods allow for smooth progression and optimal solutions.
               </p>
               <p>
-                The business team is divided into four core areas. The TOPL team handles general team operations, procurement of materials, and all logistics. The BCF team handles budget, controlling, and finances. The marketing team handles student relations, corporate sponsorship, and acquiring funds for the team. The human resources team handles recruitment and member management. All teams collaborate to ensure overall success.
+                The business team is divided into four core areas. The TOPL team handles general team operations, procurement of materials, and all logistics. The BCF team handles budget, controlling, and finances. The marketing team handles student relations, corporate
+                sponsorship, and acquiring funds for the team. The human resources team handles recruitment and member management. All teams collaborate to ensure overall success.
               </p>
               <p>
                 Lastly, the business team determines where GT Solar Decathlon can make the biggest impact in the Atlanta community via case study development and field research.
@@ -398,14 +412,14 @@
   </section>
 
   <section class="bg-dark" id="contact_us">
-      <div class="container">
-          <div class="row">
-              <div class="col-lg-8 col-lg-offset-2 text-center">
-                  <h2 class="section-heading light">Let's Get In Touch!</h2>
-                  <hr class="primary">
-                  <p>Ready to work with us? That's great! Click on one of the Team Leads above to send us an email and we will get back to you as soon as possible!</p>
-              </div>
-              <!-- <div class="col-lg-4 col-lg-offset-2 text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-8 col-lg-offset-2 text-center">
+          <h2 class="section-heading light">Let's Get In Touch!</h2>
+          <hr class="primary">
+          <p>Ready to work with us? That's great! Click on one of the Team Leads above to send us an email and we will get back to you as soon as possible!</p>
+        </div>
+        <!-- <div class="col-lg-4 col-lg-offset-2 text-center">
                   <i class="fa fa-phone fa-3x wow bounceIn"></i>
                   <p>123-456-6789</p>
               </div>
@@ -413,8 +427,8 @@
                   <i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                   <p><a href="mailto:your-email@your-domain.com">info@gtsolardecathlon.com</a></p>
               </div> -->
-          </div>
       </div>
+    </div>
   </section>
 
   <!-- jQuery -->
